# Ens3DFRKinect

dataset/1roll_test/: 3and2cmFigure.fig  5and4cmFigure.fig  5cm-SOM-ALL-Features.fig  LOOCV.m  distEucSq.m  ensembleOnePredictKNN.m  ensemblePredictKNN.m  ensembleTrainKNN.m  findAllFiles.m  getDatasetStats.m  getUniqueClusterLabels.m  importAllResults.m  importData.m  importDataNew.m  importESFdata.m  importESFlabels.m  importPFHdata.m  importPFHlabels.m  importResult.m  importResultFile.m  importSHOTdata.m  importSHOTlabels.m  patch-vs-f1score.fig  patchLabelsFromGrid.m  patchLabelsFromKmeans.m  patchLabelsFromSOM.m  patchsize-vs-f1measure.fig  plotFeaturesPerCluster.m  plotFeaturesPerClusterSize.m  plottingResults.m  (+26 more)
models/: PhiMask.max  mask.asc  mask.pcd  mask.ply  minimalmask.pcd  minimalmask.ply  model.asc  model.ply  newmask.pcd  newmodel.asc  newmodel.pcd  newmodel.ply  newmodelnormals.pcd  ni_face.pcd
people_src/: people_app.cpp
source/: CMakeLists.txt  compute_features.cpp  face_detection_apps_utils.h  folder_viewer.cpp  keypoint_features.cpp  make_voxel_patches.cpp  openni_face_detection.cpp  openni_face_detection_new.cpp  openni_face_detection_unifsampl.cpp  openni_frame_source.cpp  openni_frame_source.h
util_bin/: pcl_convert_pcd_ascii_binary  pcl_icp  pcl_normal_estimation  pcl_openni_grab_frame  pcl_pcd_grabber_viewer  pcl_ply2pcd  pcl_transform_from_viewpoint  pcl_transform_point_cloud  pcl_viewer
util_source/: euclidean_clusters.cpp  example_extract_clusters_normals.cpp  face_tracker.cpp  face_tracker_old.cpp  kinect_viewer_cuda.cpp
